[gd_scene load_steps=3 format=3 uid="uid://d1govbj1wob2m"]

[ext_resource type="Texture2D" uid="uid://bpd1883pavmrh" path="res://Assets/Sprites/BlueBatSmall.png" id="1_5fufc"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_d8xts"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d8xts")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 620.0
offset_right = 321.0
offset_bottom = 646.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
columns = 5

[node name="Life3" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_5fufc")
stretch_mode = 5

[node name="Life2" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_5fufc")
stretch_mode = 5

[node name="Life1" type="TextureRect" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_5fufc")
stretch_mode = 5

[node name="ScoreTextLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Score: "

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
text = "100"

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 500.0
offset_top = 280.0
offset_right = 673.0
offset_bottom = 328.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
